--- a/package.json
+++ b/package.json
@@ -5,10 +5,24 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "schemas",
+    "examples"
+  ],
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "clean": "rm -rf dist",
+
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+
+    "build": "npm run clean && tsc -p tsconfig.json",
+
     "validate": "node dist/cli/validate.js",
-    "dev:validate": "ts-node src/cli/validate.ts"
+    "dev:validate": "ts-node src/cli/validate.ts",
+
+    "fixtures:validate": "node dist/examples/validate_fixtures.js",
+
+    "ci": "npm run typecheck && npm run build && npm run fixtures:validate"
   },
   "dependencies": {
     "ajv": "^8.17.1",
